--- a/DVD Verleih/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
+++ b/DVD Verleih/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
@@ -1,5 +1,5 @@
 [SQLiteDatabaseBrowserPortableSettings]
-LastDrive=C:
-LastDirectory=\Users\s.nadler\Desktop\3ListeSchueler\20GUI\GUI1\GUI1-master\DVD Verleih
+LastDrive=D:
+LastDirectory=\Programmieren\BlueJ\GUI1\GUI4\DVD Verleih
 [PortableApps.comLauncherLastRunEnvironment]
-PAL:LastPortableAppsBaseDir=C:\Users\s.nadler\Desktop\3ListeSchueler\20GUI\GUI1
+PAL:LastPortableAppsBaseDir=D:\Programmieren\BlueJ\GUI1
