--- a/DVD Verleih/Data/PortableApps.comLauncherRuntimeData-SQLiteDatabaseBrowserPortable.ini
+++ b/DVD Verleih/Data/PortableApps.comLauncherRuntimeData-SQLiteDatabaseBrowserPortable.ini
@@ -1,2 +1,2 @@
 [PortableApps.comLauncher]
-PluginsDir=C:\Users\Sebi\AppData\Local\Temp\nsvF233.tmp
+PluginsDir=C:\Users\Sebi\AppData\Local\Temp\nsk20D4.tmp
